--- a/src/modules/shellprocess/shellprocess_prechroot.conf
+++ b/src/modules/shellprocess/shellprocess_prechroot.conf
@@ -2,5 +2,5 @@
 dontChroot: true
 timeout: 60
 script:
-    - "-rm -rf ${ROOT}/etc/resolv.conf"
-    - "cp -rfL /etc/resolv.conf ${ROOT}/etc/resolv.conf"
+    #- "-rm -rf ${ROOT}/etc/resolv.conf"
+    - "-cp -rf /etc/resolv.conf ${ROOT}/etc/resolv.conf"
