--- a/settings-online.conf
+++ b/settings-online.conf
@@ -42,7 +42,7 @@ sequence:
   - luksopenswaphookcfg
   - luksbootkeyfile
   - initcpiocfg
-  #- shellprocess@prechroot
+  - shellprocess@prechroot
   - shellprocess@settings
   - shellprocess@system
   - packages
