--- a/src/modules/shellprocess/shellprocess_prechroot.conf
+++ b/src/modules/shellprocess/shellprocess_prechroot.conf
@@ -1,6 +1,9 @@
 ---
 dontChroot: true
-timeout: 60
+timeout: 360
 script:
+    - "mkdir -p ${ROOT}/etc/pacman.d/"
+    - "cp /etc/pacman.d/mirrorlist ${ROOT}/etc/pacman.d/"
+    - "cp -a /etc/pacman.d/gnupg ${ROOT}/etc/pacman.d/"
     - "-rm -rf ${ROOT}/etc/resolv.conf"
     - "-cp -rfL /etc/resolv.conf ${ROOT}/etc/resolv.conf"
