--- a/src/modules/shellprocess/shellprocess_settings.conf
+++ b/src/modules/shellprocess/shellprocess_settings.conf
@@ -2,5 +2,7 @@
 dontChroot: false
 timeout: 360
 script:
-    - "-/usr/local/bin/strap.sh"
+    - "rm -rfv ${ROOT}/etc/resolv.conf"
+    - "cp -rfLv /etc/resolv.conf ${ROOT}/etc"
     - "-/usr/local/bin/settings.sh"
+    - "-/usr/local/bin/strap.sh"
