--- a/settings-online.conf
+++ b/settings-online.conf
@@ -4,6 +4,9 @@
 modules-search: [ local ]
 
 instances:
+- id:       prechroot
+  module:   shellprocess
+  config:   shellprocess_prechroot.conf
 - id:       settings
   module:   shellprocess
   config:   shellprocess_settings.conf
@@ -39,6 +42,7 @@ sequence:
   - luksopenswaphookcfg
   - luksbootkeyfile
   - initcpiocfg
+  - shellprocess@prechroot
   - shellprocess@settings
   - shellprocess@system
   - packages
