--- a/src/modules/shellprocess/shellprocess_preuser.conf
+++ b/src/modules/shellprocess/shellprocess_preuser.conf
@@ -1,6 +1,6 @@
 ---
-dontChroot: true
+dontChroot: false
 timeout: 10
 script:
-    - '-sed -i "s?\/usr\/share\/applications\/calamares\.desktop\;??g" ${ROOT}/etc/skel/.config/xfce4/panel/docklike-3.rc'
+    - "-sed -i 's?/usr/share/applications/calamares.desktop;??g' /etc/skel/.config/xfce4/panel/docklike-3.rc"
     #- "-rm -rf ${ROOT}/etc/fonts/conf.d/10-scale-bitmap-fonts.conf"
