--- a/src/modules/shellprocess/shellprocess.conf
+++ b/src/modules/shellprocess/shellprocess.conf
@@ -1,8 +1,9 @@
 ---
 dontChroot: false
-timeout: 60
+timeout: 180
 script:
     - "-/usr/local/bin/cleaner.sh"
+    - "-mkinitcpio -P"
     # - "-su ${USER} -c 'xdg-user-dirs-gtk-update --force'"
     # - "-touch ${ROOT}/tmp/thingy"
     # - "/usr/bin/false"
