--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -1,6 +1,6 @@
 # Ctlos Calamares
 pkgname=calamares-dev
-pkgver=3.3.0.alpha6
+pkgver=3.3.0-alpha6
 pkgrel=13
 pkgdesc='Distribution-independent installer framework'
 arch=('i686' 'x86_64')
