--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -1,6 +1,7 @@
 # Ctlos Calamares
 pkgname=calamares-dev
-pkgver=3.3.0-alpha6
+pkgver=3.3.0.alpha6
+_pkgver=3.3.0-alpha6
 pkgrel=13
 pkgdesc='Distribution-independent installer framework'
 arch=('i686' 'x86_64')
@@ -20,7 +21,7 @@ backup=('usr/share/calamares/modules/bootloader.conf'
         'usr/share/calamares/modules/initcpio.conf'
         'usr/share/calamares/modules/unpackfs.conf')
 
-source+=("https://github.com/calamares/calamares/releases/download/v${pkgver}/calamares-${pkgver}.tar.gz"
+source+=("https://github.com/calamares/calamares/releases/download/v${_pkgver}/calamares-${_pkgver}.tar.gz"
          git+https://github.com/ctlos/calamares#branch=dev)
 
 sha256sums=('SKIP'
