--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -9,10 +9,9 @@ url="https://github.com/ctlos/calamares"
 license=('LGPL')
 conflicts=('calamares' 'calamares-net')
 
-depends=('kconfig' 'kcoreaddons' 'kiconthemes' 'ki18n' 'kio' 'kservice'
-         'solid' 'yaml-cpp' 'kpmcore' 'mkinitcpio-openswap' 'cryptsetup'
-         'boost-libs' 'ckbcomp' 'hwinfo' 'qt5-svg' 'polkit-qt5' 'gtk-update-icon-cache' 'plasma-framework'
-         'qt5-xmlpatterns' 'squashfs-tools' 'libpwquality' 'yad' 'efibootmgr' 'icu' 'appstream-qt')
+depends=('kdbusaddons5' 'kconfig5' 'kcoreaddons5' 'kiconthemes5' 'ki18n5' 'kio5' 'solid5' 'yaml-cpp' 'kpmcore' 'mkinitcpio-openswap'
+         'boost-libs' 'ckbcomp' 'hwinfo' 'qt5-svg' 'polkit-qt5' 'gtk-update-icon-cache' 'plasma-framework5'
+         'qt5-xmlpatterns' 'squashfs-tools' 'libpwquality' 'efibootmgr' 'icu' 'appstream-qt')
 
 makedepends=('extra-cmake-modules' 'qt5-tools' 'qt5-translations' 'git' 'boost' 'python-jsonschema' 'python-pyaml' 'python-unidecode')
 
