--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -27,13 +27,13 @@ sha256sums=('SKIP'
             'SKIP')
 
 prepare() {
-    cp -a ${srcdir}/calamares/* ${srcdir}/calamares-${pkgver}
-    cp -r ${srcdir}/calamares/settings-offline.conf ${srcdir}/calamares-${pkgver}/settings.conf
-    cp -r ${srcdir}/calamares/src/modules/packages/packages-offline.conf ${srcdir}/calamares-${pkgver}/src/modules/packages/packages.conf
-    cp -r ${srcdir}/calamares/src/modules/welcome/welcome-offline.conf ${srcdir}/calamares-${pkgver}/src/modules/welcome/welcome.conf
+    cp -a ${srcdir}/calamares/* ${srcdir}/calamares-${_pkgver}
+    cp -r ${srcdir}/calamares/settings-offline.conf ${srcdir}/calamares-${_pkgver}/settings.conf
+    cp -r ${srcdir}/calamares/src/modules/packages/packages-offline.conf ${srcdir}/calamares-${_pkgver}/src/modules/packages/packages.conf
+    cp -r ${srcdir}/calamares/src/modules/welcome/welcome-offline.conf ${srcdir}/calamares-${_pkgver}/src/modules/welcome/welcome.conf
 
     rm -rf ${srcdir}/calamares
-    cd ${srcdir}/calamares-${pkgver}
+    cd ${srcdir}/calamares-${_pkgver}
     sed -i -e 's/"Install configuration files" OFF/"Install configuration files" ON/' CMakeLists.txt
 
     # change branding
@@ -42,7 +42,7 @@ prepare() {
 }
 
 build() {
-    cd ${srcdir}/calamares-${pkgver}
+    cd ${srcdir}/calamares-${_pkgver}
 
     mkdir -p build
     cd build
@@ -61,7 +61,7 @@ build() {
 }
 
 package() {
-    cd ${srcdir}/calamares-${pkgver}/build
+    cd ${srcdir}/calamares-${_pkgver}/build
     make DESTDIR="$pkgdir" install
     install -Dm644 "../data/calamares.desktop" "$pkgdir/usr/share/applications/calamares.desktop"
     install -Dm755 "../data/calamares_polkit" "$pkgdir/usr/bin/calamares_polkit"
