--- a/src/modules/users/users.conf
+++ b/src/modules/users/users.conf
@@ -14,11 +14,15 @@ defaultGroups:
     - rfkill
 
 autologinGroup:  autologin
-doAutologin:     false
+doAutologin:     true
 sudoersGroup:    wheel
 setRootPassword: true
 doReusePassword: true
-userShell: /bin/zsh
 avatarFilePath: ~/.face
-setHostname: EtcFile
-writeHostsFile: true
+
+user:
+  shell: /bin/zsh
+
+hostname:
+  location: EtcFile
+  writeHostsFile: true
