--- a/src/modules/welcome/welcome-online.conf
+++ b/src/modules/welcome/welcome-online.conf
@@ -6,7 +6,11 @@ showReleaseNotesUrl:    false
 requirements:
     requiredStorage:    7.5
     requiredRam:        1.0
-    internetCheckUrl:   http://google.com
+    internetCheckUrl:
+        - http://google.com
+        - http://www.kde.org
+        - http://www.freebsd.org
+        - https://geoip.kde.org
 
     # List conditions to check. Each listed condition will be
     # probed in some way, and yields true or false according to
@@ -29,3 +33,8 @@ requirements:
         - ram
         # - root
         - internet
+
+geoip:
+    style:    "none"
+    url:      "https://geoip.kde.org/v1/ubiquity"  # extended XML format
+    selector: "CountryCode"  # blank uses default, which is wrong
